--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-cli",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A generate-cli",
   "main": "bin/generate-cli",
   "scripts": {
@@ -12,6 +12,7 @@
   },
   "keywords": [
     "generate-cli",
+    "vue",
     "cli"
   ],
   "author": "JL_Guan",
