--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "JL_Guan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
     "execa": "^4.1.0",
