--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generate-cli",
-  "version": "1.1.11",
+  "version": "1.1.2",
   "description": "A generate-cli",
   "main": "bin/generate-cli",
   "scripts": {
@@ -25,7 +25,8 @@
     "commander": "^6.2.0",
     "execa": "^4.1.0",
     "fs-extra": "^9.0.1",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "ora": "^5.4.0"
   },
   "devDependencies": {},
   "directories": {
