--- a/template/vite/package.json
+++ b/template/vite/package.json
@@ -4,19 +4,18 @@
   "author": "JL Guan",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build && node tools/modifyAssetsUrl",
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^2.6.12",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.16",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-legacy": "^1.3.2",
+    "@vitejs/plugin-vue": "^2.3.3",
     "sass": "^1.32.8",
-    "vite": "^2.1.5",
-    "vite-plugin-vue2": "^1.4.3"
+    "vite": "^2.9.12"
   }
 }
