--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.21.1",
     "chalk": "^4.1.0",
     "commander": "^6.2.0",
+    "download-git-repo": "^3.0.2",
     "execa": "^4.1.0",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
